--- a/testProj/src/main/resources/application.properties
+++ b/testProj/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=2002
 # JPA (Java Persistence API) and Hibernate settings
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 # Specify the package(s) where your entity classes are located
 # Replace com.example.entity with the package where your entities are located
